# frc-youtube-archiver

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mise.toml  unraid-frc-archiver.xml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: db.py  events.py  logging_config.py  main.py  models.py  paths.py  runtime.py  scheduler.py  settings_defaults.py
backend/app/api/: __init__.py  actions.py  deps.py  ganymede.py  queue.py  settings.py  sources.py  sse.py  stats.py  videos.py
backend/app/services/: ganymede_client.py  ganymede_sync.py  jobs.py  media_probe.py  queue.py  reconciler.py  scanner.py  worker.py  ytdlp_runner.py
backend/app/tba/: client.py
backend/tests/: conftest.py  test_ganymede_sync.py  test_reconciler.py  test_resolution.py  test_scanner.py  test_worker.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: Toast.tsx
frontend/src/lib/: api.ts  events.ts  format.ts
frontend/src/pages/: Dashboard.tsx  History.tsx  Logs.tsx  Queue.tsx  Settings.tsx  Sources.tsx
